# pmm

./: Cargo.toml  README.md
src/: embedding_model.rs  main.rs
